--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -2,4 +2,53 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+header{
+  background-color: black;
+  color: white;
+  padding: 5px 20px;
+}
+
+.container{
+  width: 100%;
+  height: 100%;
+  background-color: lightblue;
+  overflow: auto;
+  min-height: calc(100vh -  48.8px);
+}
+
+.animationPlace{
+  width: 90%;
+  margin: 1em auto;
+  min-height: 500px;
+  background-color: white;
+  border: 1px black solid;
+}
+
+.gridCenter{
+  display: grid;
+  place-items: center center;
+}
+
+.box{
+  background-color: darkblue;
+  height: 200px;
+  width: 200px;
+  position: relative;   
+}
+
+.moveBox{
+  animation-name: moveBoxNow;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes moveBoxNow{
+  0% {transform: translate(0, 0) rotateZ(0deg); box-shadow: 0px 0px 0px black; border-radius: 0px}
+  100% {transform: translate(-100px, 0) rotateZ(-45deg); box-shadow: -15px 15px 15px black; border-radius: 50%}
 }
