--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -20,9 +20,9 @@ header{
 }
 
 .animationPlace{
-  width: 90%;
+  width: 500px;
   margin: 1em auto;
-  min-height: 500px;
+  min-height: 300px;
   background-color: white;
   border: 1px black solid;
 }
@@ -34,9 +34,10 @@ header{
 
 .box{
   background-color: darkblue;
-  height: 200px;
-  width: 200px;
-  position: relative;   
+  height: 50px;
+  width: 50px;
+  position: relative;
+  transform: translateX(-110px) 
 }
 
 .moveBox{
