--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -23,7 +23,7 @@ header{
   width: 500px;
   margin: 1em auto;
   min-height: 300px;
-  background-color: white;
+  background-color: red;
   border: 1px black solid;
 }
 
@@ -33,11 +33,15 @@ header{
 }
 
 .box{
-  background-color: darkblue;
-  height: 50px;
-  width: 50px;
+  height: 140px;
+  width: 108px;
   position: relative;
   transform: translateX(-110px) 
+}
+
+#box2{
+  background: url("/assets/images/character.png") 0px 0px;
+  background-color: transparent;
 }
 
 .moveBox{
