got walking left and right sprites working

--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -36,7 +36,7 @@ header{
   height: 140px;
   width: 108px;
   position: relative;
-  transform: translateX(-110px) 
+  /* transform: translateX(-110px)  */
 }
 
 #box2{
