--- a/public/assets/css/sprite.css
+++ b/public/assets/css/sprite.css
@@ -2,7 +2,7 @@
   width: 500px;
   margin: 1em auto;
   min-height: 300px;
-  background-color: red;
+  background-color: dodgerblue;
   border: 1px black solid;
 }
 
