--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -12,7 +12,7 @@ header{
   display: flex;
   padding: 0px 20px;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .nav-ul{
@@ -23,7 +23,7 @@ header{
 .nav-ul li{
   padding: 2px 10px 3px 10px;
   background-color: #222;
-  margin: 0px 10px 3px 10px;
+  margin: 0px 10px;
 }
 
 .navLink{
